# Houdini-Assistant-Bridge

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
agent/skills/houdini-bridge/: SKILL.md
agent/skills/houdini-bridge/manifest/: houdini_bridge_manifest.json
agent/skills/houdini-bridge/references/: asset.md  cache.md  event.md  geometry.md  node.md  overview.md  parameter.md  requirement-intake.md  scene.md  viewport.md  visual-validation.md
agent/skills/houdini-bridge/scripts/: __init__.py  _client.py  _discovery.py  _manifest.py  _preflight.py  houdini_bridge.py
docs/: architecture.md  protocol.md  safety.md
examples/: 01_inspect_scene.sh  02_build_sop_network.sh  03_geometry_summary.sh  04_parameter_keyframes.sh  05_destructive_delete.sh  10_acceptance.py  README.md  agent_demo_fracture.py  agent_demo_rock_destruction.py
plugin/python/houdini_bridge/: __init__.py  bootstrap.py  discovery.py  dispatcher.py  protocol.py  registry.py  server.py  undo.py
plugin/python/houdini_bridge/libraries/: __init__.py  _common.py  asset.py  cache.py  event.py  geometry.py  node.py  parameter.py  scene.py  viewport.py
plugin/scripts/: 123.py  456.py
tools/: gen_manifest.py  smoketest.py
